# kuka_kr6r900sixx_moveit_gazebo_setup-master

./: README.md  Robotics_1_pivot_simu.rviz  Robotics_2_pivots_simu.rviz
src/kuka_experimental/cloud_process_for_kuka_kr6r900sixx_pivot_demo/: CMakeLists.txt  cloud_process_for_kuka_kr6r900sixx_pivot_demo.kdev4  package.xml
src/kuka_experimental/cloud_process_for_kuka_kr6r900sixx_pivot_demo/.kdev4/: cloud_process_for_kuka_kr6r900sixx_pivot_demo.kdev4
src/kuka_experimental/cloud_process_for_kuka_kr6r900sixx_pivot_demo/include/: euler2Quaternion.h
src/kuka_experimental/cloud_process_for_kuka_kr6r900sixx_pivot_demo/src/: cloud_process_for_kuka_kr6r900sixx_pivot_demo.cpp  cloud_process_for_kuka_kr6r900sixx_pivot_demo1.cpp  cloud_process_for_kuka_kr6r900sixx_pivot_demo_save_bis.cpp  euler2Quaternion.cpp
src/kuka_experimental/kuka_kr6_gazebo/config/: kr6r900sixx_arm_controller.yaml  kr6r900sixx_gazebo_control687.yaml  kr6r900sixx_gripper_controller.yaml
src/kuka_experimental/kuka_kr6_gazebo/launch/: kr6r900sixx_control.launch  kr6r900sixx_control2.launch  kr6r900sixx_gazebo_1_pivot.launch  kr6r900sixx_gazebo_2_pivot.launch  kr6r900sixx_gripper_controller.launch  load_kr6r900sixx_1_pivot.launch  load_kr6r900sixx_2_pivot.launch
src/kuka_experimental/kuka_kr6_gazebo/urdf/: kuka_kr6r900sixx_macro.xacro
src/kuka_experimental/kuka_kr6_gazebo/worlds/: empty.world
src/kuka_experimental/kuka_kr6_support/config/: joint_names_kr6r900sixx.yaml  joint_names_kr6r900sixx2.yaml
src/kuka_experimental/kuka_kr6_support/launch/: robot_interface_streaming_kr6r900sixx_rsi2.launch
src/kuka_experimental/kuka_kr6_support/urdf/: kr6r900sixx_macro.xacro  kr6r900sixx_macro_modified_with_gripper.xacro  kr6r900sixx_urdf_from_xacro_for_test.urdf  kuka_kr6r900sixx.gv
src/kuka_experimental/kuka_kr6r900sixx_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml
src/kuka_experimental/kuka_kr6r900sixx_moveit_config/launch/: demo.launch  kuka_kr6r900sixx_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution_rsi.launch  moveit_rviz.launch  planning_context.launch  trajectory_execution.launch.xml
src/kuka_experimental/kuka_rsi_hw_interface/launch/: controller_spawner.launch
src/kuka_experimental/moveit_cpp_for_kuka_kr6r900sixx/: CMakeLists.txt  package.xml
src/kuka_experimental/moveit_cpp_for_kuka_kr6r900sixx/doc/move_group_interface_tutorial_kuka_kr6r900sixx/: CMakeLists.txt
src/kuka_experimental/moveit_cpp_for_kuka_kr6r900sixx/doc/move_group_interface_tutorial_kuka_kr6r900sixx/include/: compute_rms.h
src/kuka_experimental/moveit_cpp_for_kuka_kr6r900sixx/doc/move_group_interface_tutorial_kuka_kr6r900sixx/launch/: move_group_interface_tutorial_kuka_kr6r900sixx.launch
src/kuka_experimental/moveit_cpp_for_kuka_kr6r900sixx/doc/move_group_interface_tutorial_kuka_kr6r900sixx/src/: compute_rms.cpp  move_group_interface_tutorial_kuka_kr6r900sixx.cpp  move_group_interface_tutorial_kuka_kr6r900sixx2.cpp  save_kuka_kr6r900sixx_poses.cpp
